# Final

./: DEVELOPMENT.md
backend/: pyproject.toml
backend/app/: main.py  schemas.py  security.py
backend/app/dependencies/: authenticate.py
backend/app/routes/: __init__.py  auth.py  posts.py  user.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/lib/: api.ts  stores.ts  user.svelte.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/login/: +page.svelte
frontend/src/routes/register/: +page.svelte
