[project]
name = "backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.4",
]

[tool.ruff]
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    ".vscode"
]
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = true
